# gnn-recsys

./: .gitignore  .gitmodules  Makefile  README.md  ROADMAP.md  conda_bootstrap.sh  pyproject.toml  requirements-cpu.in  requirements-cuda.in  requirements-cuda.txt  requirements-dev-cuda.txt  requirements-dev.txt  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
configs/: default.yaml
docs/: ROADMAP.md  lit_review.md  papers.md  problem_statement.md  resources.md  todo.md
notebooks/: oag_cs.ipynb
requirements/: requirements-base.in  requirements-cuda.in
scripts/: recommend.py  train.py
src/: README.md  config.py  train.py  utils.py
src/data/: dataset.py  loaders.py  transforms.py  utils.py
src/data/aminer_clicks/: README.md  id_matching.sql  implicit_paper_matrix.py
src/data/oag_cs/: README.md  analyze.py  constants.py  extract_cs.py  id_matching.sql
src/data/preprocessing/: README.md  analyze.py  extract_cs.py
src/data/rard2/: extract_log.sql  extract_relations.py  id_matching.sql  test.sql
src/models/: base.py  metapath2vec.py  rhgnn.py
src/models/gnn/: layers.py  metrics.py  model.py
src/models/heco/: model.py
src/models/hgconv/: model.py
src/recommendation/: engine.py  ranking.py
src/train/: sampler.py  trainer.py
